django/djang_orm/orm/proj_rom/orm_app/queries.txt
>>> from orm_app.models import *
>>> User.objects.create(first_name:"Jack",last_name:"kramer",email="jackokramer@gmail.com")
  File "<console>", line 1
    User.objects.create(first_name:"Jack",last_name:"kramer",email="jackokramer@gmail.com")
                                  ^
SyntaxError: invalid syntax
>>> User.objects.create(first_name="Jack",last_name="kramer",email="jackokramer@gmail.com")
<User: User object (1)>
>>> User.objects.create(first_name="Pablo",last_name="Picasso",email="pablo@gmail.com")
<User: User object (2)>
>>> User.object.create(first_name="John", last_name="Singer Sargent", email="singer@sargent.com")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'User' has no attribute 'object'
>>> User.objects.create(first_name="John", last_name="Singer Sargent", email="singer@sargent
<User: User object (3)>
>>> John = User.objects.get(id=3)
>>> print(john)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'john' is not defined
>>> print(John)
User object (3)
>>> all_users = User.objects.all()
>>> print(all_users)
<QuerySet [<User: User object (1)>, <User: User object (2)>, <User: User object (3)>]>
>>> for user in all_users:
...     print(user.last_name, user.created_at)
... 
kramer 2020-06-10 22:11:43.699546+00:00
Picasso 2020-06-10 22:12:24.390686+00:00
Singer Sargent 2020-06-10 22:14:29.369614+00:00